# ai_uni

./: README.md  pyproject.toml
data/: dataset_modelo.csv  dataset_modelo_v2.csv  dataset_modelo_v3.csv
notebooks/: boston_housing_regression.ipynb  proyecto_uni.ipynb  tokenizacion_espanol_visual.ipynb
