[project]
name = "multiple-linear-regresion-for-hausing"
version = "0.1.0"
description = "Multiple Linear Regression analysis for housing prices prediction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "numpy>=2.3.4",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.5",
    "ipykernel>=7.0.1",
    "imbalanced-learn>=0.14.0",
    "category-encoders>=2.8.1",
    "graphviz>=0.21",
    "spacy>=3.8.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.1",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = []
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
